[package]
name = "acme-disk-use"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Fast disk usage analyzer with intelligent caching for incremental write workloads"
repository = "https://github.com/blackwhitehere/acme-disk-use"
homepage = "https://github.com/blackwhitehere/acme-disk-use"
documentation = "https://docs.rs/acme-disk-use"
readme = "README.md"
license = "Apache-2.0"
keywords = ["disk", "usage", "analyzer", "cache", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
walkdir = "2.5"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
criterion = "0.5" # Benchmarking library
tempfile = "3.0" # For testing with temporary files

[profile.profiling] # For profiling builds
inherits = "release"
debug = true

[[bench]] # Sample benchmark
name = "main_benchmark"
harness = false
